# SEED

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml  voila.json
docs/source/: conf.py  index.rst  modules.rst  seed.core.exporters.rst  seed.core.processors.rst  seed.core.rst  seed.rst  wsc.exporters.rst  wsc.processors.rst  wsc.rst
notebooks/: seed.ipynb
src/sc/: cli.py  config.py  downloader.py  mapper.py
src/sc/exporters/: jsonl.py
src/sc/processors/: wiktextract.py  wordnet.py
src/seed/: cli.py  config.py  models.py
src/seed/core/: __init__.py  downloader.py
src/seed/core/exporters/: __init__.py  base.py  factory.py  jsonl.py
src/seed/core/processors/: __init__.py  base.py  wiktextract.py
src/wsc/: cli.py  config.py  downloader.py  mapper.py  models.py
src/wsc/exporters/: __init__.py  base.py  json.py  jsonl.py
src/wsc/processors/: __init__.py  wiktextract.py  wordnet.py
