[build-system]
requires = ["setuptools>=80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed"
version = "0.1.0"
description = "Semantic Evaluation Dataset"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Eva", email = "eva.evangelisti03@gmail.com" }]
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "catppuccin>=2.5.0",
    "catppuccin-jupyterlab>=0.2.4",
    "black>=26.1.0",
    "furo>=2025.12.19",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "itables>=2.6.2",
    "jupyter>=1.1.1",
    "nbqa>=1.9.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "sphinx>=8.1.3",
    "voila>=0.5.11",
]

[project.scripts]
seed = "seed.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
