[build-system]
requires = ["setuptools>=80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsc"
version = "0.1.0"
description = "Wiktionary Sentence Collector"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Eva", email = "eva.evangelisti03@gmail.com" }]
dependencies = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "nltk>=3.9.4",
    "requests>=2.32.5",
    "spacy>=3.8.14",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = ["black>=26.1.0", "isort>=7.0.0"]
docs = ["furo>=2025.12.19", "sphinx>=8.1.3"]

[project.scripts]
wsc = "wsc.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
